Updated D for lamdok